# tewt

./: .gitignore  blackjack.py  pyproject.toml
poker_gui/: README.md  __init__.py  __main__.py  app.py  resources.qrc
poker_gui/core/: __init__.py  ai.py  cards.py  game.py  hand_eval.py  persist.py  players.py  pot.py  rules.py  sim.py  table_manager.py
poker_gui/data/: config.json  default_players.json  ranges.json
poker_gui/data/themes/: classic.json  dark.json
poker_gui/ui/: __init__.py  qt_app.py  table.py  tk_app.py  widgets.py
tests/: test_ai.py  test_hand_eval.py  test_pot.py  test_rules.py  test_table_config.py
